Atualizações no design e responsividade.

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
 body {
-  margin: 0rem;
-  height: 0rem;
-  border-right: 120rem solid transparent;
-  border-bottom: 59.40rem solid #1e272e;
-  background: #10ac84;
+  background: #222f3e;
   line-height: 1.5;
 }
 * {
@@ -13,10 +9,3 @@ body {
 }
 
 
-@media(max-width: 910px){
-body {
-  border-right: 26rem solid transparent;
-  border-bottom: 45rem solid #1e272e;
-}
-
-}
