--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,11 +1,10 @@
 .Title {
     position: absolute;
-    margin-left: 4vh;
-    margin-top: 40vh;
+    margin-left: 8vh;
+    margin-top: 30vh;
     color: white;
   }
   p {
-    text-align: justify;
     width: 100vh;
   }
   h1 {
@@ -18,7 +17,12 @@
     color: white;
     font-family: "Russo One", sans-serif;
   }
-  
+  .gif {
+    position: absolute;
+    margin-left: 73rem;
+    margin-top: 30vh;
+  }
+
   .middle {
     position: absolute;
     top: 50%;
@@ -36,14 +40,14 @@
     font-family: "montserrat";
     text-decoration: none;
     margin: 30px 0;
-    border: 2px solid #10ac84;
+    border: 2px solid black;
     padding: 14px 60px;
     text-transform: uppercase;
     overflow: hidden;
     transition: 1s all ease;
   }
   .btn::before {
-    background: #10ac84;
+    background: black;
     content: "";
     position: absolute;
     top: 50%;
@@ -62,30 +66,68 @@
     height: 380%;
   }
   
-  @media(max-width: 910px){
-    .Title {
-      margin-top: 7rem;
+  @media screen and (max-width: 768px){
+    h1 {
+      font-size: 1.5rem;
+    }
+    h2 {
+      font-size: 1rem;
+      width: auto;
     }
     p {
       font-size: 0.8rem;
-      width: 42vh;
-      margin-left: -3vh;
+      width: auto;
     }
-    h1 {
-      font-size: 1.8rem;
-      color: white;
-      font-family: "Russo One", sans-serif;
-      margin-left: -3vh;
+
+    .Title {
+      margin-left: 1rem;
+      width: auto;
+    }
+    .middle {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      margin-top: 32vh;
+      margin-left: -1rem;
+      
     }
     
-    .middle {
-    transform: translate(-50%, -50%);
-    margin-top: 40vh;
-    margin-left: -10vh;
-  }
-  
-    h2 {
-      margin-left: -3vh;
+    .btn {
+      position: relative;
+      display: block;
+      color: white;
+      font-size: 12px;
+      font-family: "montserrat";
+      text-decoration: none;
+      margin: 30px 0;
+      border: 2px solid black;
+      padding: 12px 28px;
+      text-transform: uppercase;
+      overflow: hidden;
+      transition: 1s all ease;
     }
-  
+    .btn::before {
+      background: black;
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      transition: all 0.6s ease;
+    }
+    
+    .btn4::before {
+      width: 100%;
+      height: 0%;
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    .btn4:hover::before {
+      height: 380%;
+    }
+    
+    .gif {
+      display: none;
+    }
   }
